current, file that was previously current must be unset automatically.

* Added context menu on shift + F10.

* A little bit beautified css.

* Added function getRefreshButton.

* Fixed bug with refreshing directory, from now current file would not be seeted up to first, after refresh.

* Added ability to view any file.

* Moved error message a little bit lower.


2012.08.06, Version 0.1.5

* Added tab support.

* Fixed bug with Path links.

* From now CodeMirror js files loads, when f4 key pressed.

* Fixed bug with showing CodeMirror after first show.

* Added ability to read files in CodeMirror.

* Added ability rename files.

* Fixed bug with CodeMirror vertical scroll bar.

* Added loading image when file going to be edited.

* All sync functions changed to async equivalents.

* On f4 key pressed when current-file is folder
CodeMirror opens json data of folder.

* Fixed bug with response when we have no rihgts
read dir server sends 404 response for now,
not 200 ok.

* Fixed bug with forming error of loading dir.
Was : "not found".
Now : "Error: EACCES, readdir '/root'"

* Fixed bug with showing loading spinner, when f4 key
pressed couple times and CodeMirror not loaded fully.

* Setted readOnly mode, when directory opened in CodeMirror.

* Added api for getting curent file, getting active
and passive panels and show/hide any of panels.


2012.07.27, Version 0.1.4

* Added local version of Droids font for offline mode

* Fixed bug with positioning of cursor when came back 
from folder whith long name.

* Fixed bug with setting up current file, if a couple of
files was with the same name on 16-chars, after going
up on folders, current file would be last.

* Fixed bug with links and titles with spaces in Path of
current directory.

* Added ability to send 404 response if file not found.

* Fixed bug which occurs when error reading directory happens.

* Fixed bug: ErrorImage.title writes always for now, no matter
why error occurred.
