@@ -680,12 +680,12 @@ CloudClient.keyBinding=(function(){
 });
 
 /* function loads and shows editor */
-CloudClient.Editor = (function() {    
+CloudClient.Editor = (function(pIsReadOnly) {    
     /* loading CloudMirror plagin */    
     Util.jsload(CloudClient.LIBDIRCLIENT +
         'editor.js',{
             onload:(function(){
-                CloudCommander.Editor.Keys();
+                CloudCommander.Editor.Keys(pIsReadOnly);
             })
     });
 });
