@@ -82,7 +82,16 @@ CloudCommander.keyBinding = (function(){
                 }
                 
                 /* if f3 pressed */
-                else if(event.keyCode === lKEY.F3){                                        
+                else if(event.keyCode === lKEY.F3 && !event.shiftKey){
+                    if (typeof CloudCommander.Editor === 'function')
+                        CloudCommander.Editor(true);
+                    
+                    event.preventDefault();//запрет на дальнейшее действие
+                }
+                
+                /* if <shift> + f3 pressed */
+                else if(event.keyCode === lKEY.F3 &&
+                    event.shiftKey){                                        
                     if (typeof CloudCommander.Viewer === 'function')
                         CloudCommander.Viewer();
                     
