@@ -44,6 +44,14 @@ CloudCommander.Menu.getConfig    = (function(){
             'delete': {name: 'Delete',
                 callback: function(key, opt){
                     console.log('delete menu item choosen');
+            }},
+            
+            download: {name: 'Download',callback: function(key, opt){
+                var lCurrent    = lThis.getCurrentFile();
+                var lLink       = lThis.getByTag('a', lCurrent)[0];
+                
+                
+                console.log('downloadin file...');
             }}
         }
     };
