@@ -94,9 +94,17 @@ CloudCommander.Viewer.FancyBox.loadData          = (function(pA){
     var lConfig = this.getConfig();
     
     this.Images.showLoad();
+        
+    var lLink = pA.href;
+    
+    /* убираем адрес хоста*/
+    lLink = '/' + lLink.replace(document.location.href,'');
+    
+    if (lLink.indexOf(CloudFunc.NOJS) === CloudFunc.FS.length)
+        lLink = lLink.replace(CloudFunc.NOJS, '');
     
     $.ajax({
-        url     : pA.href,
+        url     : lLink,
          error  : (function(jqXHR, textStatus, errorThrown){
              lThis.loading             = false; 
              return lThis.Images.showError(jqXHR, textStatus, errorThrown);
@@ -179,7 +187,8 @@ CloudCommander.Viewer.Keys                  = (function(){
             /* если клавиши можно обрабатывать */
             if(CloudCommander.keyBinded)
                 /* if f3 pressed */
-                if(pEvent.keyCode === CloudCommander.KEY.F3){
+                if(pEvent.keyCode === CloudCommander.KEY.F3 &&
+                pEvent.shiftKey){
                     CloudCommander.Viewer.FancyBox.show();
                 
                     pEvent.preventDefault();
